Add structure for home page

--- a/themes/raiser/sass/_mixins.scss
+++ b/themes/raiser/sass/_mixins.scss
@@ -95,13 +95,13 @@
 //==================
 
 /* Large desktop */
-@mixin xlarge {
+@mixin large {
   @media (min-width: 75em) {
     @content;
   }
 }
 
-@mixin large {
+@mixin medium {
   @media (min-width: 48em) {
     @content;
   }
