--- a/themes/raiser/sass/layouts/_raiser_layout.scss
+++ b/themes/raiser/sass/layouts/_raiser_layout.scss
@@ -1,9 +1,14 @@
-$zen-column-count: 12;
-$zen-gutter-width: 20px;
+#main {
+  max-width: 820px; 
+  margin: 0 auto;
+}
 
 #main #content {
-  @include zen-grid-container;
   padding-bottom: 2em;
-  margin: 0 auto;
-  max-width: 1140px; 
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+#content-secondary {
+  @include zen-clear;
 }
