--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -581,7 +581,7 @@ table {
 /* Base Styles and elments */
 /* line 3, ../sass/base/_base.scss */
 body {
-  background: #e5e5e5;
+  background: #f1f1f1;
   font-family: Arial, Helvetica, Verdana, sans-serif;
 }
 
@@ -787,20 +787,6 @@ form button:hover {
     /* Span 2 columns, starting in 2nd column from left. */
     /* Span 1 column, starting in 1st column from left. */
   }
-  /* line 84, ../sass/layouts/_responsive.scss */
-  .sidebar-first #content {
-    float: left;
-    width: 66.66667%;
-    margin-left: 33.33333%;
-    margin-right: -100%;
-  }
-  /* line 89, ../sass/layouts/_responsive.scss */
-  .sidebar-first .region-sidebar-first {
-    float: left;
-    width: 33.33333%;
-    margin-left: 0%;
-    margin-right: -33.33333%;
-  }
 
   /**
    * The layout when there is only one sidebar, the right one.
@@ -809,20 +795,6 @@ form button:hover {
   .sidebar-second {
     /* Span 2 columns, starting in 1st column from left. */
     /* Span 1 column, starting in 3rd column from left. */
-  }
-  /* line 99, ../sass/layouts/_responsive.scss */
-  .sidebar-second #content {
-    float: left;
-    width: 66.66667%;
-    margin-left: 0%;
-    margin-right: -66.66667%;
-  }
-  /* line 104, ../sass/layouts/_responsive.scss */
-  .sidebar-second .region-sidebar-second {
-    float: left;
-    width: 33.33333%;
-    margin-left: 66.66667%;
-    margin-right: -100%;
   }
 
   /**
@@ -834,65 +806,12 @@ form button:hover {
     /* Span 1 column, starting in 1st column from left. */
     /* Start a new row and span all 3 columns. */
   }
-  /* line 114, ../sass/layouts/_responsive.scss */
-  .two-sidebars #content {
-    float: left;
-    width: 66.66667%;
-    margin-left: 33.33333%;
-    margin-right: -100%;
-  }
-  /* line 119, ../sass/layouts/_responsive.scss */
-  .two-sidebars .region-sidebar-first {
-    float: left;
-    width: 33.33333%;
-    margin-left: 0%;
-    margin-right: -33.33333%;
-  }
   /* line 124, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second {
-    float: left;
-    width: 100%;
-    margin-left: 0%;
-    margin-right: -100%;
-    padding-left: 0;
-    padding-right: 0;
-    clear: left;
     /* Apply the shared properties of grid items in a single, efficient ruleset. */
     /* Span 1 column, starting in the 1st column from left. */
     /* Span 1 column, starting in the 2nd column from left. */
     /* Span 1 column, starting in the 3rd column from left. */
-  }
-  /* line 130, ../sass/layouts/_responsive.scss */
-  .two-sidebars .region-sidebar-second .block {
-    padding-left: 10px;
-    padding-right: 10px;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-    word-wrap: break-word;
-  }
-  /* line 134, ../sass/layouts/_responsive.scss */
-  .two-sidebars .region-sidebar-second .block:nth-child(3n+1) {
-    float: left;
-    width: 33.33333%;
-    margin-left: 0%;
-    margin-right: -33.33333%;
-    clear: left;
-  }
-  /* line 139, ../sass/layouts/_responsive.scss */
-  .two-sidebars .region-sidebar-second .block:nth-child(3n+2) {
-    float: left;
-    width: 33.33333%;
-    margin-left: 33.33333%;
-    margin-right: -66.66667%;
-  }
-  /* line 143, ../sass/layouts/_responsive.scss */
-  .two-sidebars .region-sidebar-second .block:nth-child(3n) {
-    float: left;
-    width: 33.33333%;
-    margin-left: 66.66667%;
-    margin-right: -100%;
   }
 }
 /**
@@ -907,20 +826,6 @@ form button:hover {
     /* Span 4 columns, starting in 2nd column from left. */
     /* Span 1 column, starting in 1st column from left. */
   }
-  /* line 162, ../sass/layouts/_responsive.scss */
-  .sidebar-first #content {
-    float: left;
-    width: 80%;
-    margin-left: 20%;
-    margin-right: -100%;
-  }
-  /* line 167, ../sass/layouts/_responsive.scss */
-  .sidebar-first .region-sidebar-first {
-    float: left;
-    width: 20%;
-    margin-left: 0%;
-    margin-right: -20%;
-  }
 
   /**
    * The layout when there is only one sidebar, the right one.
@@ -929,20 +834,6 @@ form button:hover {
   .sidebar-second {
     /* Span 4 columns, starting in 1st column from left. */
     /* Span 1 column, starting in 5th column from left. */
-  }
-  /* line 177, ../sass/layouts/_responsive.scss */
-  .sidebar-second #content {
-    float: left;
-    width: 80%;
-    margin-left: 0%;
-    margin-right: -80%;
-  }
-  /* line 182, ../sass/layouts/_responsive.scss */
-  .sidebar-second .region-sidebar-second {
-    float: left;
-    width: 20%;
-    margin-left: 80%;
-    margin-right: -100%;
   }
 
   /**
@@ -954,48 +845,283 @@ form button:hover {
     /* Span 1 column, starting in 1st column from left. */
     /* Span 1 column, starting in 5th column from left. */
   }
-  /* line 192, ../sass/layouts/_responsive.scss */
-  .two-sidebars #content {
+}
+/* line 5, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #content {
+  float: left;
+  width: 100%;
+  margin-left: 0%;
+  margin-right: -100%;
+  background: white;
+}
+@media (min-width: 48em) {
+  /* line 5, ../sass/layouts/_campaign.scss */
+  .page-redhen-campaign #content {
     float: left;
-    width: 60%;
-    margin-left: 20%;
-    margin-right: -80%;
-  }
-  /* line 197, ../sass/layouts/_responsive.scss */
-  .two-sidebars .region-sidebar-first {
-    float: left;
-    width: 20%;
+    width: 66.66667%;
     margin-left: 0%;
-    margin-right: -20%;
-  }
-  /* line 202, ../sass/layouts/_responsive.scss */
-  .two-sidebars .region-sidebar-second {
-    float: left;
-    width: 20%;
-    margin-left: 80%;
-    margin-right: -100%;
+    margin-right: -66.66667%;
   }
 }
-/* line 4, ../sass/layouts/_raiser_layout.scss */
+/* line 14, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign aside {
+  float: left;
+  width: 100%;
+  margin-left: 0%;
+  margin-right: -100%;
+}
+@media (min-width: 48em) {
+  /* line 14, ../sass/layouts/_campaign.scss */
+  .page-redhen-campaign aside {
+    float: left;
+    width: 33.33333%;
+    margin-left: 8.33333%;
+    margin-right: -41.66667%;
+  }
+}
+
+/* line 2, ../sass/layouts/_home.scss */
+body.front #content {
+  background: none;
+  border-bottom: 1px solid #5e9733;
+  text-align: center;
+}
+
+/* line 1, ../sass/layouts/_raiser_layout.scss */
+#main {
+  max-width: 820px;
+  margin: 0 auto;
+}
+
+/* line 6, ../sass/layouts/_raiser_layout.scss */
 #main #content {
   padding-bottom: 2em;
-  margin: 0 auto;
-  max-width: 1140px;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
+
+/* line 12, ../sass/layouts/_raiser_layout.scss */
+#content-secondary {
+  clear: left;
+}
+
+/**
+ * @file
+ * Positioning for a responsive layout.
+ *
+ * Define CSS classes to create a fluid grid layout with optional sidebars
+ * depending on whether blocks are placed in the left or right sidebars.
+ *
+ * This layout uses the Zen Grids plugin for Compass: http://zengrids.com
+ */
+/**
+ * Center the page.
+ *
+ * For screen sizes larger than 1200px, prevent excessively long lines of text
+ * by setting a max-width.
+ */
+/* line 34, ../sass/layouts/_responsive.scss */
+#page,
+.region-bottom {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Apply the shared properties of grid items in a single, efficient ruleset. */
+/* line 45, ../sass/layouts/_responsive.scss */
+#header,
+#content,
+#navigation,
+.region-sidebar-first,
+.region-sidebar-second,
+#footer {
+  padding-left: 10px;
+  padding-right: 10px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  word-wrap: break-word;
+}
+
+/* Containers for grid items and flow items. */
 /* line 46, ../sass-extensions/zen-grids/stylesheets/zen/_grids.scss */
-#main #content:before, #main #content:after {
+#header:before, #header:after,
+#main:before,
+#main:after,
+#footer:before,
+#footer:after {
   content: "";
   display: table;
 }
 /* line 50, ../sass-extensions/zen-grids/stylesheets/zen/_grids.scss */
-#main #content:after {
+#header:after,
+#main:after,
+#footer:after {
   clear: both;
 }
 
+/* Navigation bar */
+@media all and (min-width: 480px) {
+  /* line 59, ../sass/layouts/_responsive.scss */
+  #main {
+    /* Move all the children of #main down to make room. */
+    position: relative;
+  }
+
+  /* line 63, ../sass/layouts/_responsive.scss */
+  #navigation {
+    /* Move the navbar up inside #main's padding. */
+    height: 3em;
+    width: 100%;
+  }
+}
+/**
+ * Use 3 grid columns for smaller screens.
+ */
+@media all and (min-width: 480px) and (max-width: 959px) {
+  /**
+   * The layout when there is only one sidebar, the left one.
+   */
+  /* line 82, ../sass/layouts/_responsive.scss */
+  .sidebar-first {
+    /* Span 2 columns, starting in 2nd column from left. */
+    /* Span 1 column, starting in 1st column from left. */
+  }
+
+  /**
+   * The layout when there is only one sidebar, the right one.
+   */
+  /* line 97, ../sass/layouts/_responsive.scss */
+  .sidebar-second {
+    /* Span 2 columns, starting in 1st column from left. */
+    /* Span 1 column, starting in 3rd column from left. */
+  }
+
+  /**
+   * The layout when there are two sidebars.
+   */
+  /* line 112, ../sass/layouts/_responsive.scss */
+  .two-sidebars {
+    /* Span 2 columns, starting in 2nd column from left. */
+    /* Span 1 column, starting in 1st column from left. */
+    /* Start a new row and span all 3 columns. */
+  }
+  /* line 124, ../sass/layouts/_responsive.scss */
+  .two-sidebars .region-sidebar-second {
+    /* Apply the shared properties of grid items in a single, efficient ruleset. */
+    /* Span 1 column, starting in the 1st column from left. */
+    /* Span 1 column, starting in the 2nd column from left. */
+    /* Span 1 column, starting in the 3rd column from left. */
+  }
+}
+/**
+ * Use 5 grid columns for larger screens.
+ */
+@media all and (min-width: 960px) {
+  /**
+   * The layout when there is only one sidebar, the left one.
+   */
+  /* line 160, ../sass/layouts/_responsive.scss */
+  .sidebar-first {
+    /* Span 4 columns, starting in 2nd column from left. */
+    /* Span 1 column, starting in 1st column from left. */
+  }
+
+  /**
+   * The layout when there is only one sidebar, the right one.
+   */
+  /* line 175, ../sass/layouts/_responsive.scss */
+  .sidebar-second {
+    /* Span 4 columns, starting in 1st column from left. */
+    /* Span 1 column, starting in 5th column from left. */
+  }
+
+  /**
+   * The layout when there are two sidebars.
+   */
+  /* line 190, ../sass/layouts/_responsive.scss */
+  .two-sidebars {
+    /* Span 3 columns, starting in 2nd column from left. */
+    /* Span 1 column, starting in 1st column from left. */
+    /* Span 1 column, starting in 5th column from left. */
+  }
+}
 /* Component (SMACSS module) rules */
 /* line 1, ../sass/components/_admin-menu.scss */
 .admin-menu-icon {
   width: 30px;
+}
+
+/* line 4, ../sass/components/_campaign_list_item.scss */
+.front #block-views-campaigns-block h2 {
+  text-align: center;
+}
+/* line 8, ../sass/components/_campaign_list_item.scss */
+.front #block-views-campaigns-block td {
+  background: white;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 3px 10px #999999;
+  -moz-box-shadow: 0 3px 10px #999999;
+  box-shadow: 0 3px 10px #999999;
+  text-align: center;
+}
+/* line 16, ../sass/components/_campaign_list_item.scss */
+.front #block-views-campaigns-block td .entity-redhen-campaign {
+  padding: 1em;
+}
+/* line 19, ../sass/components/_campaign_list_item.scss */
+.front #block-views-campaigns-block td .entity-redhen-campaign div {
+  margin: 0 auto;
+}
+/* line 23, ../sass/components/_campaign_list_item.scss */
+.front #block-views-campaigns-block td .entity-redhen-campaign h2 {
+  font-size: 1.25em;
+  padding: 0;
+  margin: 0;
+  line-height: 1.5em;
+}
+/* line 29, ../sass/components/_campaign_list_item.scss */
+.front #block-views-campaigns-block td .entity-redhen-campaign h2 a {
+  color: #5e9733;
+}
+/* line 32, ../sass/components/_campaign_list_item.scss */
+.front #block-views-campaigns-block td .entity-redhen-campaign .field-name-field-banner-image {
+  border-radius: 5px;
+  margin: 0 auto 2em;
+  max-height: 129px;
+  max-width: 185px;
+  overflow: hidden;
+  -webkit-box-shadow: 0 2px 3px #999999;
+  -moz-box-shadow: 0 2px 3px #999999;
+  box-shadow: 0 2px 3px #999999;
+}
+/* line 41, ../sass/components/_campaign_list_item.scss */
+.front #block-views-campaigns-block td .entity-redhen-campaign .redhen-campaign-thermo-percent-bar-wrapper {
+  background: #f1f1f1;
+  margin-top: 1em;
+  border: 3px solid white;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 2px 3px #999999;
+  -moz-box-shadow: 0 2px 3px #999999;
+  box-shadow: 0 2px 3px #999999;
+  height: 20px;
+  padding: 0;
+}
+/* line 50, ../sass/components/_campaign_list_item.scss */
+.front #block-views-campaigns-block td .entity-redhen-campaign .redhen-campaign-thermo-percent-bar-wrapper .redhen-campaign-thermo-percent-bar {
+  background: #5e9733;
+  height: 100%;
+  margin: 0;
+}
+@media (min-width: 48em) {
+  /* line 71, ../sass/components/_campaign_list_item.scss */
+  .front #block-views-campaigns-block td:nth-child(3n) {
+    float: left;
+    width: 33.33333%;
+    margin-left: 66.66667%;
+    margin-right: -100%;
+  }
 }
 
 /* line 1, ../sass/components/_footer.scss */
@@ -1005,7 +1131,7 @@ footer {
 /* line 3, ../sass/components/_footer.scss */
 footer #pre-footer {
   background: white;
-  border-bottom: 3px solid #e5e5e5;
+  border-bottom: 3px solid #f1f1f1;
   padding: 0.2em 1em;
   overflow: hidden;
   text-align: center;
@@ -1135,7 +1261,7 @@ footer #colophon a:hover {
   -moz-box-shadow: 0 2px 3px #989898;
   box-shadow: 0 2px 3px #989898;
 }
-@media (min-width: 48em) {
+@media (min-width: 75em) {
   /* line 3, ../sass/components/_forms.scss */
   #user-login,
   #user-register-form {
