--- a/themes/raiser/sass/_init.scss
+++ b/themes/raiser/sass/_init.scss
@@ -104,7 +104,7 @@ $black:      #000000;
 $white:      #ffffff;
 $gray:       #989898;
 $lt-gray:    #f1f1f1;
-$page-bg:    #e5e5e5;
+$page-bg:    $lt-gray;
 
 // The amount lists, blockquotes and comments are indented.
 $indent-amount: 30px;
