--- a/themes/raiser/sass/layouts/_responsive.scss
+++ b/themes/raiser/sass/layouts/_responsive.scss
@@ -10,7 +10,7 @@
 
 // We are going to create a fluid grid with 1, 3, or 5 columns and 20px gutters
 // between columns (applied as 10px of left/right padding on each column).
-$zen-column-count:  1;
+$zen-column-count:  12;
 $zen-gutter-width:  20px;
 
 // If you need IE6/7 support for box-sizing: border-box (default), see _init.scss
@@ -74,7 +74,7 @@ $zen-auto-include-item-base: false;
  */
 @media all and (min-width: 480px) and (max-width: 959px) {
 
-  $zen-column-count: 3;
+  // $zen-column-count: 3;
 
   /**
    * The layout when there is only one sidebar, the left one.
@@ -82,12 +82,12 @@ $zen-auto-include-item-base: false;
   .sidebar-first {
     /* Span 2 columns, starting in 2nd column from left. */
     #content {
-      @include zen-grid-item(2, 2);
+     // @include zen-grid-item(2, 2);
     }
 
     /* Span 1 column, starting in 1st column from left. */
     .region-sidebar-first {
-      @include zen-grid-item(1, 1);
+      // @include zen-grid-item(1, 1);
     }
   }
 
@@ -97,12 +97,12 @@ $zen-auto-include-item-base: false;
   .sidebar-second {
     /* Span 2 columns, starting in 1st column from left. */
     #content {
-      @include zen-grid-item(2, 1);
+      // @include zen-grid-item(2, 1);
     }
 
     /* Span 1 column, starting in 3rd column from left. */
     .region-sidebar-second {
-      @include zen-grid-item(1, 3);
+      // @include zen-grid-item(1, 3);
     }
   }
 
@@ -112,36 +112,36 @@ $zen-auto-include-item-base: false;
   .two-sidebars {
     /* Span 2 columns, starting in 2nd column from left. */
     #content {
-      @include zen-grid-item(2, 2);
+      // @include zen-grid-item(2, 2);
     }
 
     /* Span 1 column, starting in 1st column from left. */
     .region-sidebar-first {
-      @include zen-grid-item(1, 1);
+      // @include zen-grid-item(1, 1);
     }
 
     /* Start a new row and span all 3 columns. */
     .region-sidebar-second {
-      @include zen-grid-item(3, 1);
-      @include zen-nested-container(); // Since we're making every block in this region be a grid item.
-      @include zen-clear();
+      // @include zen-grid-item(3, 1);
+      // @include zen-nested-container(); // Since we're making every block in this region be a grid item.
+      // @include zen-clear();
 
       /* Apply the shared properties of grid items in a single, efficient ruleset. */
       .block {
-        @include zen-grid-item-base();
+        // @include zen-grid-item-base();
       }
       /* Span 1 column, starting in the 1st column from left. */
       .block:nth-child(3n+1) {
-        @include zen-grid-item(1, 1);
-        @include zen-clear();
+        // @include zen-grid-item(1, 1);
+        // @include zen-clear();
       }
       /* Span 1 column, starting in the 2nd column from left. */
       .block:nth-child(3n+2) {
-        @include zen-grid-item(1, 2);
+        // @include zen-grid-item(1, 2);
       }
       /* Span 1 column, starting in the 3rd column from left. */
       .block:nth-child(3n) {
-        @include zen-grid-item(1, 3);
+        // @include zen-grid-item(1, 3);
       }
     }
   }
@@ -152,7 +152,7 @@ $zen-auto-include-item-base: false;
  */
 @media all and (min-width: 960px) {
 
-  $zen-column-count: 5;
+  // $zen-column-count: 5;
 
   /**
    * The layout when there is only one sidebar, the left one.
@@ -160,12 +160,12 @@ $zen-auto-include-item-base: false;
   .sidebar-first {
     /* Span 4 columns, starting in 2nd column from left. */
     #content {
-      @include zen-grid-item(4, 2);
+      // @include zen-grid-item(4, 2);
     }
 
     /* Span 1 column, starting in 1st column from left. */
     .region-sidebar-first {
-      @include zen-grid-item(1, 1);
+      // @include zen-grid-item(1, 1);
     }
   }
 
@@ -175,12 +175,12 @@ $zen-auto-include-item-base: false;
   .sidebar-second {
     /* Span 4 columns, starting in 1st column from left. */
     #content {
-      @include zen-grid-item(4, 1);
+      // @include zen-grid-item(4, 1);
     }
 
     /* Span 1 column, starting in 5th column from left. */
     .region-sidebar-second {
-      @include zen-grid-item(1, 5);
+      // @include zen-grid-item(1, 5);
     }
   }
 
@@ -190,17 +190,17 @@ $zen-auto-include-item-base: false;
   .two-sidebars {
     /* Span 3 columns, starting in 2nd column from left. */
     #content {
-      @include zen-grid-item(3, 2);
+      // @include zen-grid-item(3, 2);
     }
 
     /* Span 1 column, starting in 1st column from left. */
     .region-sidebar-first {
-      @include zen-grid-item(1, 1);
+      // @include zen-grid-item(1, 1);
     }
 
     /* Span 1 column, starting in 5th column from left. */
     .region-sidebar-second {
-      @include zen-grid-item(1, 5);
+      // @include zen-grid-item(1, 5);
     }
   }
 }
